mcabber (0.7.2-dev)

 * Lots of internal changes (code cleanup)
 * Improved commands parsing
   Commands now handle correctly resources or nicknames containing whitespace
 * The roster is updated in real time when receiving an update from the server
 * /info shows subscriptions (none, from, to, both)
 * The deprecated Agent list IQ request has been removed
 * Empty resources are displayed (do not use the arbitrary "default" string
   instead)
 * MUC: "/room topic" shows the current room topic
 * MUC: "/room nick" shows the current nickname
 * MUC: Add "/room kick", "/room ban", "/room whois"
 * MUC: Add "/room affil" and "/room role"
 * MUC: Add "/room destroy"
 * MUC: Display a message when somebody is kicked/banned from a room
 * MUC: Multiple fixes and improvements
 * Handle messages beginning with "/me " (it is replaced with the nickname)

 -- Mikael, ?

mcabber (0.7.1)

 * New option 'buddy_format' to select the way buddies are displayed in
   the log window
 * New option 'show_status_in_buffer' to display status changes in the
   buffer (chat) window
 * The "/status" command has been improved -- its behaviour has changed,
   please read the manual page
 * The log window height can be set
 * Add "/buffer up" and "/buffer down" commands
 * The "/move" command does not jump to the body in the new group anymore
 * MUC: Nickname completion in a room
 * MUC: Improved "/room names" command
 * MUC: departure messages are displayed
 * MUC: mcabber now notices when it is ejected from a room
 * MUC: status is updated in chatrooms
 * External commands: the message body can be passed to the external command
   (see the sample configuration file and the sample eventcmd script)
 * UTF-8 conversion failures are written to the tracelog file (if enabled)
 * The resource priority can now be changed once connected
 * Fix a bug when moving a chatroom to another group (in the roster)
 * Minor cleanup (warnings, small memory leaks and compilation stuff)

 -- Mikael, 2005-11-26
