@@ -56,6 +56,9 @@ Here are some of the features of mcabber:
  Commands completion: If possible, mcabber will try to complete your command line if you hit the Tab key\&.
 .TP
 \(bu
+ Input line history: Any message or command entered is in the input line history and can be reused easily\&.
+.TP
+\(bu
  External actions: Some events (like receiving a message) can trigger an external action, for example a shell script (you need to enable it in your configuration file)\&. A sample events script ("eventcmd") is provided with mcabber source code, in the contrib directory\&.
 .LP
 
@@ -78,6 +81,9 @@ Text typing occurs in the \fIinput line\fR; basic operations are supported (left
 PageUp and PageDown keys are used to move in the roster\&.
 
 
+Up and Down arrow keys can be used to move in the input line history; they jump to the previous/next line from the history beginning with the same string (from first column to the cursor column)\&.
+
+
 To send a message, move to the choosen buddy in the buddylist, type your message and hit enter\&. If the line begins with a slash, this will be interpreted as a command (see the COMMAND section below)\&. Hit escape to leave the chat mode\&.
 
 Here is a quick description of the key bindings:
@@ -86,11 +92,13 @@ Ctrl\-a		Go to the beginning of the input line
 
 Ctrl\-e		Go to the end of the input line
 
-Ctrl\-l		Force a resize
+Ctrl\-l		Force a refresh
+
+Up/Down     	Move in the input line history
 
 PgUp/PgDown	Move inside the roster (buddylist)
 
-Tab			Complete current word, in the input line
+Tab    		Complete current word, in the input line
 
 Ctrl\-g		Cancel completion / ctrl\-g
 
@@ -124,6 +132,16 @@ Aliases are expanded only once, thus they can not be chained\&. "/alias name" di
 Example: "/alias away = status away"\&.
 
 .TP
+\fB/authorization\fR allow|cancel|request [jid]
+Manage the presence subscriptions\&.
+
+If no jid is provided, the current buddy is used\&.
+
+ \fBallow\fR  	allow the buddy to receive your presence updates
+ \fBcancel\fR 	cancel the buddy' subscription to your presence updates
+ \fBrequest\fR	request a subscription to the buddy's presence updates
+
+.TP
 \fB/bind\fR keycode = command line
 Bind a command line to the key with the "keycode" code number\&.
 
@@ -134,18 +152,18 @@ Note: aliases can be used in key bindings\&.
 Example: "/bind 265 = status online" (265 is F1 for me, but it may depend on your ncurses installation)\&.
 
 .TP
-\fB/buffer\fR clear|top|bottom|search_backward|search_forward
+\fB/buffer\fR clear|top|bottom|date|%|search_backward|search_forward
 The buffer command manipulates the current buddy's buffer (chat window)\&.
 
- \fBclear\fR               	clear the current buddy chat window
- \fBbottom\fR              	jump to the bottom of the current buddy chat buffer
- \fBtop\fR                 	jump to the top of the current buddy chat buffer
- \fBup\fR [n]              	scroll the buffer up n lines (default: half a screen)
- \fBdown\fR [n]            	scroll the buffer down n lines (default: half a screen)
+ \fBclear\fR      	clear the current buddy chat window
+ \fBbottom\fR     	jump to the bottom of the current buddy chat buffer
+ \fBtop\fR        	jump to the top of the current buddy chat buffer
+ \fBup\fR [n]     	scroll the buffer up n lines (default: half a screen)
+ \fBdown\fR [n]   	scroll the buffer down n lines (default: half a screen)
+ \fBdate\fR date  	jump to the first line after the specified date in the chat buffer (date format: "YYYY\-mm\-dd[THH:MM:SS]", "\-" and ":" are optional)
+ \fB%\fR n        	jump to position %n of the buddy chat buffer
  \fBsearch_backward\fR text	search for "text" in the current buddy chat buffer
  \fBsearch_forward\fR  text	search for "text" in the current buddy chat buffer
- \fBdate\fR date           	jump to the first line after the specified date in the chat buffer (date format: "YYYY\-mm\-dd[THH:MM:SS]", "\-" and ":" are optional)
- \fB%\fR n                 	jump to position %n of the buddy chat buffer
 
 .TP
 \fB/clear\fR
@@ -234,7 +252,7 @@ The roster command manipulates the roster/buddylist\&.  Here are the available p
  \fBshow_offline\fR	show offline buddies
  \fBtoggle_offline\fR	toggle display of offline buddies
  \fBsearch\fR bud	search for a buddy with a name or buddy containing "bud" (only in the displayed buddylist)
- \fBalternate\fR	jump to alternate buddy\&. The "alternate" buddy is the last buddy left while being in chat mode (this command is thus especially useful after commands like "/roster unread_first")
+ \fBalternate\fR 	jump to alternate buddy\&. The "alternate" buddy is the last buddy left while being in chat mode (this command is thus especially useful after commands like "/roster unread_first")
  \fBunread_first\fR	jump to the first unread message
  \fBunread_next\fR	jump to the next unread message
 
